@@ -47,6 +47,24 @@ function hook_search_api_solr_field_mapping_alter(SearchApiIndex $index, array &
 }
 
 /**
+ * Alter Solr documents before they are sent to Solr for indexing.
+ *
+ * @param array $documents
+ *   An array of SearchApiSolrDocument objects ready to be indexed, generated
+ *   from $items array.
+ * @param SearchApiIndex $index
+ *   The search index for which items are being indexed.
+ * @param array $items
+ *   An array of items being indexed.
+ */
+function hook_search_api_solr_documents_alter(array &$documents, SearchApiIndex $index, array $items) {
+  // Adds a "foo" field with value "bar" to all documents.
+  foreach ($documents as $document) {
+    $document->setField('foo', 'bar');
+  }
+}
+
+/**
  * Lets modules alter the search results returned from a Solr search.
  *
  * @param array $results
